examples/test/testpolicy860.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy860
  namespace: namespace458
spec:
  podSelector:
    matchLabels:
      key23: value5
      key36: value1
      key26: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value20
      podSelector:
        matchLabels:
          key41: value13
